[package]
name = "bake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
clap = "4.4.8"
futures = "0.3.29"
handlebars = "4.5.0"
knuffel = "3.2.0"
miette = { version = "5.10.0", features = ["fancy"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tinytemplate = "1.2.1"
tokio = { version = "1.34.0", features = ["process", "macros", "rt-multi-thread"] }
